syntax = "proto3";

package demo.v1;

option go_package = "codegen/api/protos/demo/v1;demov1";

import "google/protobuf/empty.proto";

message Demo {
  int32 id = 1;
  string name = 2;
  string description = 3;
}

message ListDemosRequest {
}

message ListDemosResponse {
  repeated Demo items = 1;
}

message GetDemoRequest {
  int32 id = 1;
}

message CreateDemoRequest {
  string name = 1;
  string description = 2;
}

message UpdateDemoRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
}

message DeleteDemoRequest {
  int32 id = 1;
}

// SERVICE DEFINITION
service DemoService {
  rpc List (ListDemosRequest) returns (ListDemosResponse) {}
  rpc Get (GetDemoRequest) returns (Demo) {}
  rpc Create (CreateDemoRequest) returns (Demo) {}
  rpc Update (UpdateDemoRequest) returns (Demo) {}
  rpc Delete (DeleteDemoRequest) returns (google.protobuf.Empty) {}
}
